welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:32: error: not found: value color
  faireV(color.blue)
         ^